blog list for 404

--- a/404.md
+++ b/404.md
@@ -4,3 +4,7 @@ permalink: /404.html
 ---
 
 Sorry that page doesn't exist go to the [main page ](/)
+
+or checkout some of my posts:
+
+{% include blog-feed.html %}
