--- a/404.md
+++ b/404.md
@@ -1,10 +1,7 @@
 ---
-layout: default
+layout: 404
 permalink: /404.html
 ---
 
 Sorry that page doesn't exist go to the [main page ](/)
 
-or checkout some of my posts:
-
-{% include blog-feed.html %}
