update 404 with image

--- a/404.md
+++ b/404.md
@@ -3,5 +3,6 @@ layout: p404
 permalink: /404.html
 ---
 
-Sorry that page doesn't exist go to the [main page ](/)
+![Page not found](/images/404_pageNotFound.jpg){:class="img-responsive"}
 
+Sorry that page doesn't exist you can go to the [main page ](/)
