--- a/_pages/podcast-episodes/ep-05.md
+++ b/_pages/podcast-episodes/ep-05.md
@@ -1,13 +1,13 @@
 ---
 layout: page
-title: National Analytics Conferance Ireland, and AWS User group.
+title: National Analytics Conference Ireland, and AWS User group.
 permalink: /podcast/episode/005
 show: false
 ---
 
-<h2>Talking about the the search for a new data person, story telling and Terraform.</h2>
+<h2>Talking about the search for a new data person, story telling and Terraform.</h2>
 
-This episode I talk about attending the National Analytics Conferance Ireland where I'm looking for a new data science/ML/AI type, and an AWS user group meetup where I fell in love with Terraform.
+This episode I talk about attending the National Analytics Conference Ireland where I'm looking for a new data science/ML/AI type, and an AWS user group meetup where I fell in love with Terraform.
 
 <div class="podcast-episode">
     <i>Tue, 21 Nov 2017 09:10:00 GMT</i><br />
