_layouts/podcast.html && ep-06.md

--- a/_pages/podcast-episodes/ep-05.md
+++ b/_pages/podcast-episodes/ep-05.md
@@ -1,33 +1,14 @@
 ---
-layout: page
+layout: podcast
 title: National Analytics Conference Ireland, and AWS User group.
 permalink: /podcast/episode/005
+subtitle: Talking about the search for a new data person, story telling and Terraform.
+label: This episode I talk about attending the National Analytics Conference Ireland where I'm looking for a new data science/ML/AI type, and an AWS user group meetup where I fell in love with Terraform.
+date: Tue, 21 Nov 2017 09:10:00 GMT
+duration: 34:07
+source: https://s3-eu-west-1.amazonaws.com/podcast.dave-albert.com/005-Dave-Albert-Show.mp3
 show: false
 ---
-
-<h2>Talking about the search for a new data person, story telling and Terraform.</h2>
-
-This episode I talk about attending the National Analytics Conference Ireland where I'm looking for a new data science/ML/AI type, and an AWS user group meetup where I fell in love with Terraform.
-
-<div class="podcast-episode">
-    <i>Tue, 21 Nov 2017 09:10:00 GMT</i><br />
-    <i>duration: 34:07</i>
-    <audio src="https://s3-eu-west-1.amazonaws.com/podcast.dave-albert.com/005-Dave-Albert-Show.mp3" controls="controls">
-    Your browser does not support the audio element.
-    </audio>
-</div>
-
-&nbsp;
-
-[Digital Ocean Free Credit](https://m.do.co/c/16b16e2a7fb9){:target="_blank"}
-
-&nbsp;
-
-{% include contact.md %}
-
-&nbsp;
-
-Transcript:
 
 Hello and welcome to the podcast. I'm your host, Dave Albert. In this show, I talk about technology, building a company as a CTO and co-founder, and have guests to discuss their roles in technology and entrepreneurship.
 
@@ -56,6 +37,3 @@ And then the last one was Alan Kiernan of Ryanair and Cation Dynamics h I think 
 Until next time, remember, any sufficiently advanced technology is indistinguishable from magic.
 
 
-<div>
-{% include disqus.html %}
-</div>
