--- a/_pages/podcast-episodes/ep-06.md
+++ b/_pages/podcast-episodes/ep-06.md
@@ -1,33 +1,14 @@
 ---
-layout: page
+layout: podcast
 title: Dublin Indie Hackers no. 3 - with Courtland Allen and John Collison @ Stripe
 permalink: /podcast/episode/006
+subtitle: Takeaways from a Fireside Chat with Indie Hackers founder Courtland Allen and Stripe co-founder John Collison
+label: The biggest takeaways I hade from Indie Hackers meetup with Courtland Allen and Stripe co-founder John Collison. 
+date: Fri, 09 Nov 2018 05:14:00 GMT
+duration: 21:24
+source: https://s3-eu-west-1.amazonaws.com/podcast.dave-albert.com/006-Dave-Albert-Show.mp3
 show: false
 ---
 
+<i> Coming Soon </i>
 
-<h2>Takeaways from a Fireside Chat with Indie Hackers founder Courtland Allen and Stripe co-founder John Collison</h2>
-
-
-The biggest takeaways I hade from Indie Hackers meetup with Courtland Allen and Stripe co-founder John Collison. 
-
-<div class="podcast-episode">
-    <i>Fri, 09 Nov 2018 05:14:00 GMT</i><br />
-    <i>duration: 21:24</i>
-    <audio src="https://s3-eu-west-1.amazonaws.com/podcast.dave-albert.com/006-Dave-Albert-Show.mp3" controls="controls">
-    Your browser does not support the audio element.
-    </audio>
-</div>
-
-
-&nbsp;
-
-{% include contact.md %}
-
-&nbsp;
-
-Transcript:
-
-<i>
-Coming Soon
-</i>
