update for episodes pages

--- a/_pages/podcast-episodes/ep-005.md
+++ b/_pages/podcast-episodes/ep-005.md
@@ -5,7 +5,7 @@ permalink: /podcast/episode/005
 subtitle: Talking about the search for a new data person, story telling and Terraform.
 label: This episode I talk about attending the National Analytics Conference Ireland where I'm looking for a new data science/ML/AI type, and an AWS user group meetup where I fell in love with Terraform.
 date: Tue, 21 Nov 2017 09:10:00 GMT
-duration: 34:07
+duration: "34:07"
 source: https://s3-eu-west-1.amazonaws.com/podcast.dave-albert.com/005-Dave-Albert-Show.mp3
 show: false
 ---
