--- a/_pages/podcast-episodes/ep-006.md
+++ b/_pages/podcast-episodes/ep-006.md
@@ -5,7 +5,7 @@ permalink: /podcast/episode/006
 subtitle: Takeaways from a Fireside Chat with Indie Hackers founder Courtland Allen and Stripe co-founder John Collison
 label: The biggest takeaways I hade from Indie Hackers meetup with Courtland Allen and Stripe co-founder John Collison. 
 date: Fri, 09 Nov 2018 05:14:00 GMT
-duration: 21:24
+duration: "21:24"
 source: https://s3-eu-west-1.amazonaws.com/podcast.dave-albert.com/006-Dave-Albert-Show.mp3
 show: false
 ---
