finished /podcast/episode/Guest-Rob-Healy-Agile-Lean

--- a/_pages/podcast-episodes/ep-007.md
+++ b/_pages/podcast-episodes/ep-007.md
@@ -1,9 +1,24 @@
 ---
 layout: podcast
-permalink: /podcast/episode/007
-title: "Rob Healy"
-subtitle: "Rob Healy"
-label: " -- Email: podcast@dave-albert.com  Twitter: https://twitter.com/dave_albert  Instagram: https://www.instagram.com/dave.albert/  Websites: https://dave-albert.com | https://medit.online"
+permalink: /podcast/episode/Guest-Rob-Healy-Agile-Lean
+image: /images/guests/Rob-Healy.jpg
+title: "Guest Rob Healy | Agile/Lean Startups"
+subtitle: "Rob Healy and I discussing agile and lean in startups."
+label: "I sat down with Rob Healy of Ammeon who is a co-organizer of the Agile-Lean Ireland group.  We discussed how startups and other orginisations can use Agile and Lean to do more faster.
+<br><br>
+<b>
+A bit about Rob
+</b>
+<br>
+Rob is a principal consultant with Ammeon where he provides agile and lean training, coaching and consulting services to startups, SMEs and enterprise clients. A qualified mechanical engineer and MBA, he has worked to develop and improve products and services for the nuclear industry, formula one teams, telcos and antivirus companies.In his spare time, he organises the Agile-Lean Ireland Meetup group that hosts technology meetups for Scrum Masters and Agile and Lean Coaches once a month.
+
+<br><br>
+<b>
+About Ammeon
+</b>
+
+<br>
+Ammeon is an Irish owned Training, Consulting and IT Professional Services company. From Understanding the Fundamentals of Agile-Lean, to Operating IT Software in Production, our training services are designed to improve and fast-track your organisation's journey. We can custom-designed our courses to meet our client's specific needs and provide coaching assistance to help them integrate new processes and technologies into their working environment. Ammeon is listed on Enterprise Ireland's Lean Service Providers list and also on their Lean Education Directory."
 date: Thu, 15 Nov 2018 04:30:54 GMT
 duration: "50:52"
 source: https://s3-eu-west-1.amazonaws.com/podcast.dave-albert.com/007-Rob-Healy.mp3
@@ -12,3 +27,6 @@ show: false
 
 <i> Coming Soon </i>
 
+<div>
+{% include disqus.html %}
+</div>
