--- a/_pages/podcast-episodes/ep-009.md
+++ b/_pages/podcast-episodes/ep-009.md
@@ -1,6 +1,7 @@
 ---
 layout: podcast
 permalink: /podcast/episode/009
+image: /images/guests/Dermot-Casey.jpg
 title: "Guest Dermot Casey | NDRC, Startups, Accelerator Programmes"
 subtitle: "Dermot Casey and I discussing the NDRC, startups and accelerator programmes"
 label: "Dermot sources startup investment opportunities and with cash and acceleration mentor them through to securing early customers and follow-on investment.
