ep-001.md layout: podcast

--- a/_pages/podcast-episodes/ep-001.md
+++ b/_pages/podcast-episodes/ep-001.md
@@ -1,28 +1,15 @@
 ---
-layout: page
-title: Hello World, being a CTO and Co-Founder
+layout: podcast
 permalink: /podcast/episode/001
+image: "/images/me2-square-1200.JPG"
+title: "Hello World, being a CTO and Co-Founder"
+subtitle: "An introduction to me, One15, and this podcast."
+label: "The debut episode"
+date: Sat, 08 Apr 2017 07:01:00 GMT
+duration: "11:46"
+source: https://s3-eu-west-1.amazonaws.com/podcast.dave-albert.com/001-Dave-Albert-Show.mp3
 show: false
 ---
-
-<h3>An introduciton to me, One15, and this podcast.</h3>
-
-
-<div class="podcast-episode">
-    <i>Sat, 08 Apr 2017 07:01:00 GMT</i><br />
-    <i>duration: 11:46</i>
-    <audio src="https://s3-eu-west-1.amazonaws.com/podcast.dave-albert.com/001-Dave-Albert-Show.mp3" controls="controls">
-    Your browser does not support the audio element.
-    </audio>
-</div>
-
-&nbsp;
-
-{% include contact.md %}
-
-&nbsp;
-
-Transcript:
 
 
 Hello and welcome to the podcast. I'm your host Dave Albert. In this show, I talk about technology, building a company as a CTO and co-founder, and have guests to discuss their roles in technology and entrepreneurship.
