added disqus to first few episodes

--- a/_pages/podcast-episodes/ep-002.md
+++ b/_pages/podcast-episodes/ep-002.md
@@ -1,28 +1,17 @@
 ---
-layout: page
-title: Choosing Digital Ocean over AWS
+layout: podcast
 permalink: /podcast/episode/002
+image: "/images/me2-square-1200.JPG"
+title: "Choosing Digital Ocean over AWS"
+subtitle: "Choosing Digital Ocean over AWS"
+label: "This episode I explain the decision to choose Digital Ocean over Amazon AWS."
+date: Sat, 08 Apr 2017 07:10:00 GMT
+duration: "23:58"
+source: https://s3-eu-west-1.amazonaws.com/podcast.dave-albert.com/002-Dave-Albert-Show.mp3
 show: false
 ---
 
-
-This episode I explain the decision to choose Digital Ocean over Amazon AWS.  
-
-<div class="podcast-episode">
-    <i>Sat, 08 Apr 2017 07:10:00 GMT</i><br />
-    <i>duration: 11:46</i>
-    <audio src="https://s3-eu-west-1.amazonaws.com/podcast.dave-albert.com/002-Dave-Albert-Show.mp3" controls="controls">
-    Your browser does not support the audio element.
-    </audio>
-</div>
-
-&nbsp;
-
 [Digital Ocean Free Credit](https://m.do.co/c/16b16e2a7fb9){:target="_blank"}
-
-&nbsp;
-
-{% include contact.md %}
 
 &nbsp;
 
@@ -44,7 +33,3 @@ So let me know if there is anything you'd like to hear more about. If you think 
 
 Until next time, remember, any sufficiently advanced technology is indistinguishable from magic.
 
-
-<div>
-{% include disqus.html %}
-</div>
