--- a/_pages/podcast-episodes/ep-003.md
+++ b/_pages/podcast-episodes/ep-003.md
@@ -1,14 +1,14 @@
 ---
-layout: page
+layout: podcast
 title: User Productivity Tools We Use
 permalink: /podcast/episode/003
+subtitle: The productivity tools we use at Medit
+label: "This episode I explain our decisions to choose different user productivity tools."
+source: https://s3-eu-west-1.amazonaws.com/podcast.dave-albert.com/003-Dave-Albert-Show.mp3
+date: Tue, 11 Apr 2017 14:05:00 GMT
+duration: "23:26"
 show: false
 ---
-
-
-This episode I explain our decisions to choose different user productivity tools.  
-
-
 
 Tools:
 
@@ -18,24 +18,7 @@ Tools:
   [Facebook Workplace](https://workplace.fb.com/){:target="_blank"} <br />
   [Atlassian bitbucket](https://bitbucket.org/){:target="_blank"} <br />
 
-
-<div class="podcast-episode">
-    <i>Tue, 11 Apr 2017 14:05:00 GMT</i><br />
-    <i>duration: 23:26</i>
-    <audio src="https://s3-eu-west-1.amazonaws.com/podcast.dave-albert.com/003-Dave-Albert-Show.mp3" controls="controls">
-    Your browser does not support the audio element.
-    </audio>
-</div>
-
-&nbsp;
-
 [Digital Ocean Free Credit](https://m.do.co/c/16b16e2a7fb9){:target="_blank"}
-
-&nbsp;
-
-{% include contact.md %}
-
-&nbsp;
 
 Transcript:
 
@@ -57,7 +40,3 @@ That pretty much covers all of our user-based tools. At some point, I'll go deep
 
 Until next time, remember, any sufficiently advanced technology is indistinguishable from magic.
 
-
-<div>
-{% include disqus.html %}
-</div>
