--- a/_pages/podcast-episodes/ep-004.md
+++ b/_pages/podcast-episodes/ep-004.md
@@ -1,31 +1,16 @@
 ---
-layout: page
+layout: podcast
 title: I am back, NDRC Accelerator, Startups are hard
+subtitle: I am finally back and some of the struggles we have been through.
+label: "This episode I talk about the challenges we have had, and the NDRC accelerator program that we have been through. I also talk a bit about the agile challenges and quirks of AWS credits and how Azure credits are very compelling."
+source: https://s3-eu-west-1.amazonaws.com/podcast.dave-albert.com/004-Dave-Albert-Show.mp3
+date: Tue, 21 Nov 2017 09:00:00 GMT
+duration: "18:26"
 permalink: /podcast/episode/004
 show: false
 ---
 
-<h2>I am finally back and some of the struggles we have been through.</h2>
-
-This episode I talk about the challenges we have had, and the NDRC accelerator program that we have been through. I also talk a bit about the agile challenges and quirks of AWS credits and how Azure credits are very compelling.
-
-<div class="podcast-episode">
-    <i>Tue, 21 Nov 2017 09:00:00 GMT</i><br />
-    <i>duration: 18:26</i>
-    <audio src="https://s3-eu-west-1.amazonaws.com/podcast.dave-albert.com/004-Dave-Albert-Show.mp3" controls="controls">
-    Your browser does not support the audio element.
-    </audio>
-</div>
-
-&nbsp;
-
 [Digital Ocean Free Credit](https://m.do.co/c/16b16e2a7fb9){:target="_blank"}
-
-&nbsp;
-
-{% include contact.md %}
-
-&nbsp;
 
 Transcript:
 
@@ -43,6 +28,3 @@ Until next time, remember, any sufficiently advanced technology is indistinguish
 
 
 
-<div>
-{% include disqus.html %}
-</div>
